[gd_scene load_steps=17 format=2]

[ext_resource path="res://objects/ramp.gd" type="Script" id=1]
[ext_resource path="res://objects/ramp_3.tres" type="PrismMesh" id=2]
[ext_resource path="res://objects/ramp_front.tres" type="Material" id=3]
[ext_resource path="res://objects/ramp_1.tres" type="PrismMesh" id=4]
[ext_resource path="res://objects/ramp_middle.tres" type="Material" id=6]

[sub_resource type="HeightMapShape" id=1]
map_width = 4
map_depth = 9
map_data = PoolRealArray( 0, 0.6, 1.2, 1.8, 0, 0.6, 1.2, 1.8, 0, 0.6, 1.2, 1.8, 0, 0.6, 1.2, 1.8, 0, 0.6, 1.2, 1.8, 0, 0.6, 1.2, 1.8, 0, 0.6, 1.2, 1.8, 0, 0.6, 1.2, 1.8, 0, 0.6, 1.2, 1.8 )

[sub_resource type="CubeMesh" id=2]
material = ExtResource( 6 )
size = Vector3( 0.5, 2, 8 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.25, 1, 4 )

[sub_resource type="PrismMesh" id=4]
material = ExtResource( 3 )
left_to_right = 1.0
size = Vector3( 3.5, 2, 8 )

[sub_resource type="PrismMesh" id=5]
material = ExtResource( 3 )
left_to_right = 1.0
size = Vector3( 1, 1, 8 )

[sub_resource type="PrismMesh" id=6]
material = ExtResource( 3 )
left_to_right = 1.0
size = Vector3( 1, 1, 8 )

[sub_resource type="HeightMapShape" id=7]
map_width = 3
map_depth = 9
map_data = PoolRealArray( -1, 0, -1, -1, 0, -1, -1, 0, -1, -1, 0, -1, -1, 0, -1, -1, 0, -1, -1, 0, -1, -1, 0, -1, -1, 0, -1 )

[sub_resource type="HeightMapShape" id=8]
map_width = 7
map_depth = 9
map_data = PoolRealArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 )

[sub_resource type="CubeMesh" id=9]
material = ExtResource( 6 )
size = Vector3( 1, 4, 8 )

[sub_resource type="BoxShape" id=10]
extents = Vector3( 0.5, 2, 4 )

[sub_resource type="PrismMesh" id=11]
left_to_right = 1.0
size = Vector3( 5, 4, 8 )

[node name="ramp" type="Spatial"]
script = ExtResource( 1 )

[node name="one" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
visible = false

[node name="MeshBack" type="MeshInstance" parent="one"]
mesh = ExtResource( 4 )
material/0 = null

[node name="CollisionBack" type="CollisionShape" parent="one"]
transform = Transform( 1.19813, -0.0558389, 0, 0.0670067, 0.99844, 0, 0, 0, 1, 0, -0.905, 0 )
shape = SubResource( 1 )
disabled = true

[node name="MeshMiddle" type="MeshInstance" parent="one"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="CollisionMiddle" type="CollisionShape" parent="one"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0 )
shape = SubResource( 3 )
disabled = true

[node name="MeshFront" type="MeshInstance" parent="one"]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 4, 0, 0 )
mesh = SubResource( 4 )
material/0 = null

[node name="CollisionFront" type="CollisionShape" parent="one"]
transform = Transform( -1.19812, 0.0558912, 3.89434e-07, 0.0670695, 0.998437, -2.27242e-09, -4.66743e-07, 1.94971e-08, -1, 3.96308, -0.904506, 0 )
shape = SubResource( 1 )
disabled = true

[node name="two" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0 )
visible = false

[node name="MeshInstance" type="MeshInstance" parent="two"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
mesh = SubResource( 5 )
material/0 = null

[node name="MeshInstance2" type="MeshInstance" parent="two"]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 1, 1, 0 )
mesh = SubResource( 6 )
material/0 = null

[node name="CollisionFront" type="CollisionShape" parent="two"]
transform = Transform( 0.999992, -0.00389206, 0, 0.00389206, 0.999992, 0, 0, 0, 1, 0.5, 1.5, 0 )
shape = SubResource( 7 )
disabled = true

[node name="three" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
visible = false

[node name="MeshFront" type="MeshInstance" parent="three"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 1, 0 )
mesh = ExtResource( 2 )
material/0 = null

[node name="CollisionFront" type="CollisionShape" parent="three"]
transform = Transform( 0.780218, -0.625508, 0, 0.625508, 0.780218, 0, 0, 0, 1, -2.06165, 0.948135, 0 )
shape = SubResource( 8 )
disabled = true

[node name="MeshMiddle" type="MeshInstance" parent="three"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 0 )
mesh = SubResource( 9 )
material/0 = null

[node name="CollisionMiddle" type="CollisionShape" parent="three"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 0 )
shape = SubResource( 10 )
disabled = true

[node name="MeshBack" type="MeshInstance" parent="three"]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 4, 1, 0 )
mesh = SubResource( 11 )
material/0 = ExtResource( 3 )

[node name="CollisionBack" type="CollisionShape" parent="three"]
transform = Transform( 0.7808, 0.624782, 0, -0.624782, 0.7808, 0, 0, 0, 1, 4, 1, 0 )
shape = SubResource( 8 )
disabled = true
